# premier-ai-tool-api

./: README.md  id_rsa_bazyl_rei  id_rsa_bazyl_rei.pub  main.py  pyproject.toml
premier/models/: keyword.py  validation.py
premier/prompts/: keywords.txt  validation.txt
premier/services/: article_service.py  keyword_service.py  oauth_service.py  validation_service.py
premier/utils/: prompt_utils.py
